🔥 Fix Header and Footer z-index + Menu content size on mobile landscape (#34)

--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -36,6 +36,7 @@ $box-shadow-color: rgba(0, 0, 0, 0.1);
 // z-index
 $welcome-animation-z-index: 9999;
 $menu-z-index: 50;
+$header-z-index: 30;
 $footer-z-index: 30;
 
 
